pods/ingress/nginx/nginx-ingress-DaemonSet.yaml
apiVersion: extensions/v1beta1
kind: DaemonSet
metadata:
  name: nginx-ingress-controller
  labels:
    name: nginx-ingress-lb
  namespace: nginx-ingress  
spec:
  template:
    metadata:
      labels:
        name: nginx-ingress-lb
      #annotations:
      #  prometheus.io/port: '10254'  #Temporarily not configure this plugin
      #  prometheus.io/scrape: 'true'
    spec:
      imagePullSecrets:
      - name: registry.peter.com.key 
      terminationGracePeriodSeconds: 60
      hostNetwork: true
      containers:
      - image: registry.peter.com/k8s-server/nginx-ingress-controller:0.9.0-beta.11
        name: nginx-ingress-lb
        imagePullPolicy: IfNotPresent
        readinessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
        livenessProbe:
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 10
          timeoutSeconds: 5
        ports:
        - containerPort: 80
          hostPort: 80
        - containerPort: 443
          hostPort: 443
        - containerPort: 1022
          hostPort: 1022
        args:
        - /nginx-ingress-controller
        - --default-backend-service=$(POD_NAMESPACE)/default-http-backend
        - --tcp-services-configmap=$(POD_NAMESPACE)/tcp-ingress-configmap
        - --configmap=$(POD_NAMESPACE)/nginx-load-balancer-conf
        - --v=2
        - --apiserver-host=http://10.2.35.25:8080
