pods/ingress/nginx/dashboard-kibana-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dashboard-ingress
  namespace: kube-system
spec:
  rules:
  - host: dashboard.peter.com
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 80
